coupon-core: 쿠폰 발급 api 설계 및 검증
Redis가 싱글쓰레드로 동작하여 동시성 문제가 발생하지 않는다고 하더라도 여러 api 서버를 사용할 때 검증 단계에서 값을 조회하는 과정에서 동시성 문제가 발생할 수 있다. 이 부분을 고려하여 분산락을 사용하여 해결하였다.